981-Pases/PAS20221U220100020-SFSW/20220513/yaml/pasajero-declaracion-consulta-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: pasajero-declaracion-consulta-backend
   namespace: controladuaneroms-pasajero
   labels:
      name: pasajero-declaracion-consulta-backend
   annotations:
      nginx.ingress.kubernetes.io/use-regex: "true"
spec:
   rules:
   -  host: aduanas.k8s.sunat.peru
      http:
         paths:
         -  path:  /v1/controladuanero/pasajero/declaracion/e/declaracionesingresosalida/(.+)-(.+)-(.+)-(.+)/ultimasdeclaraciones$
            backend:
               serviceName: pasajero-declaracion-consulta-backend
               servicePort: 7136
         -  path:  /v1/controladuanero/pasajero/declaracion/e/declaracionesingresosalida/descarga$
            backend:
               serviceName: pasajero-declaracion-consulta-backend
               servicePort: 7136
         -  path:  /v1/controladuanero/pasajero/declaracion/e/declaracionesingresosalida/(.+)$
            backend:
               serviceName: pasajero-declaracion-consulta-backend
               servicePort: 7136
         -  path:  /v1/controladuanero/pasajero/declaracion/e/doi/(.+)-(.+)-(.+)-(.+)$
            backend:
               serviceName: pasajero-declaracion-consulta-backend
               servicePort: 7136             
         -  path:  /v1/controladuanero/pasajero/declaracion/e/declaracionesingresosalida/declaraciones/(.+)-(.+)-(.+)-(.+)$
            backend:
               serviceName: pasajero-declaracion-consulta-backend
               servicePort: 7136            
         -  path:  /v1/controladuanero/pasajero/declaracion/e/items/(.+)$
            backend:
               serviceName: pasajero-declaracion-consulta-backend
               servicePort: 7136              
         -  path:  /v1/controladuanero/pasajero/declaracion/e/declaracionesdinero/(.+)$
            backend:
               serviceName: pasajero-declaracion-consulta-backend
               servicePort: 7136
